[package]
name = "cdk-stripe-payment-processor"
version = "0.0.1"
edition = "2021"
authors = ["asmo <asmogo@protonmail.com>"]
description = "Stripe Payment Processor: gRPC server bridging to Stripe REST API"
license = "MIT"

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.7"
base64 = "0.21"
bytes = "1"
figment = { version = "0.10", features = ["env", "toml"] }
hex = "0.4"
hmac = "0.12"
http = "1"
humantime = "2"
humantime-serde = "1"
prost = "0.13"
rand = "0.8"
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "deflate", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "signal"] }
tokio-stream = "0.1"
tonic = { version = "0.12", features = ["transport", "tls"] }
tonic-reflection = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
rcgen = "0.12"
redb = "3.1.0"

[build-dependencies]
tonic-build = "0.12"

[features]
default = []